--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <!-- Wrapped image inside rotating div -->
 <div class="center-image">
-  <img src="sangi1.jpg" alt="Sangi">
+  <img src="sangi.jpg" alt="Sangi">
 </div>
 
 <div class="message">I like you too much Sangi</div>
